# kingfisher-bnb

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: CI.yml
data/: test_data.txt
examples/: example.py
python/kingfisher_bnb/: __init__.py  kingfisher_bnb_extension.pyi  utils.py
src/: correction.rs  lib.rs  main.rs
src/bnb/: mod.rs
src/bnb/solvers/: best_first.rs  bfs.rs  dfs.rs  mod.rs
tests/: search_tests.rs  test_kingfisher.py
